kong-gateway-with-opa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: opa-example
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: http-svc
          servicePort: 80
